# experiments

./: Cargo.toml  README.txt  output.json  output_mac_mini.json  output_sls.json  output_w2245.json  output_ws2022.json
.github/workflows/: mirror.yml
src/: lib.rs  main.rs  sleep.rs  sleep2.rs
winui3/HelloApp/: App.xaml  App.xaml.cs  HelloApp.csproj  HelloApp.sln  MainWindow.xaml  MainWindow.xaml.cs  Package.appxmanifest  app.manifest
winui3/HelloApp/Properties/: launchSettings.json
