[package]
name = "experiments"
authors = ["29 <791603901@qq.com>"]
version = "0.0.1"
license = "MIT/Apache-2.0"
readme = "README.txt"
repository = "https://github.com/czy-29/experiments"
homepage = "https://github.com/czy-29/experiments"
description = """
29's experiments
"""
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Because we used `rustc-check-cfg` in build script
# 因为我们在构建脚本中使用了`rustc-check-cfg`
# https://blog.rust-lang.org/2024/05/06/check-cfg.html
rust-version = "1.80.0"

[package.metadata.docs.rs]
all-features = true

[dependencies]
indexmap = { version = "2.7.1", features = ["serde"] }
mac_address = "1.1.7"
rand = "0.9.0"
rust_decimal = "1.36.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1.0.138", features = ["preserve_order"] }
serde_with = "3.12.0"
sysinfo = "0.33.1"
tokio = { version = "1.43.0", features = ["full"] }
tokio-util = { version = "0.7.13", features = ["time"] }
wgpu =  { version = "24.0.1", features = ["serde"] }

[dev-dependencies]

[build-dependencies]
version_check = "0.9.5"
